atualizaçao - imagem de fundo header

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     /* print (número)*/
 
 header {
-    background-image: url(./imagens/img.png);
+    background-image: url(./imagens/bg-mobile.png);
     background-size: cover;
     height: 8.375rem;
 
