--- a/style.css
+++ b/style.css
@@ -35,3 +35,23 @@ header {
     margin-bottom: 3.7rem;
 }
 
+main {
+    padding-inline: 1.5rem;
+
+}
+
+.descricao {
+    margin-bottom: 2.5rem;
+}
+
+.descricao h1 {
+    color: var(--gray-800);
+    margin-bottom: 1rem;
+    font-size: 1.5625rem;
+}
+
+.descricao p {
+    font-size: 0.8125rem;
+    color: var(--gray-600);
+    margin-bottom: 2.5rem;
+}
