--- a/style.css
+++ b/style.css
@@ -68,3 +68,19 @@ main {
     justify-content: space-between;
     align-items: center;
 }
+.login label {
+    font-size: 0.875rem;
+    color: var(--gray-800);
+    font-weight: 600;
+}
+
+.login a {
+    color: var(--purple);
+    text-decoration: none;
+    font-size: 0.875rem;
+    font-weight: 600;
+}
+
+.login a:hover {
+    text-decoration: underline;
+}
