--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ main {
     color: var(--white);
 }
 
+.login button:hover {
+    background: var(--ligth-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .login > p {
     color: var(--gray-600);
 }
@@ -158,9 +164,20 @@ main {
     }
     conteudo {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
         .bg-desktop {
         display: block;
         width: 100%;
+    }
+
+    .descricao h1 {
+        font-size: 2.25rem;
+    }
+
+    .descricao p {
+        font-size: 1rem;
     }
 }
