--- a/style.css
+++ b/style.css
@@ -130,11 +130,7 @@ main {
     font-size: 1rem;
 }
 
-main {
-    margin-inline: 7rem;
-    max-width: 24rem;
-    padding: 0;
-}
+
 
 @media(min-width: 1000px) {
    
@@ -168,10 +164,18 @@ main {
         flex-direction: column;
         align-items: center;
     }
-        .bg-desktop {
+    
+    .bg-desktop {
         display: block;
         width: 100%;
     }
+    
+    .bg-desktop img {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
 
     .descricao h1 {
         font-size: 2.25rem;
